# twitter-clone

./: .env  .replit  Procfile  README.md  build.sh  build_files.sh  pyproject.toml  requirements.txt  vercel.json
twitting/: manage.py
twitting/account/: views.py
twitting/frontend/: package-lock.json  package.json
twitting/frontend/public/: index.html
twitting/frontend/src/: App.js  index.css  index.js
twitting/profiles/: forms.py  models.py  serializers.py  tests.py  urls.py  views.py
twitting/profiles/api/: urls.py  views.py
twitting/profiles/migrations/: 0001_initial.py  0002_rename_userprofile_profile.py  0003_alter_profile_user.py  0004_alter_profile_user.py  0005_auto_20210810_1320.py
twitting/static-root/css/: main.b1bb6069.chunk
twitting/static-root/js/: 2.6d50de88.chunk.js.map  main.a0825cd1.chunk.js  main.a0825cd1.chunk.js.map  main.a25f6fba.chunk.js  main.a25f6fba.chunk.js.map
twitting/static/css/: main.b1bb6069.chunk.css  main.b1bb6069.chunk.css.map
twitting/static/js/: 2.6d50de88.chunk.js
twitting/templates/: react.html
twitting/templates/Parts/: form.html  navbar.html
twitting/templates/account/: auth.html
twitting/templates/pages/: feed.html  home.html  index.html
twitting/templates/profiles/: detail.html
twitting/templates/react/: base_script.html  css.html  js.html
twitting/templates/tweets/: detail.html  list.html
twitting/tweets/: admin.py  forms.py  models.py  serializers.py  tests.py  urls.py  views.py
twitting/tweets/migrations/: 0001_initial.py  (+4 more)
twitting/twitting/: asgi.py  settings.py  urls.py  wsgi.py
(+17 files in other folders)
